<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/Provider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="5dip"
            android:text="@string/Provider"
            android:textSize="20dip" >
        </TextView>

        <TextView
            android:id="@+id/ProviderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ProviderText"
            android:textSize="20dip" >
        </TextView>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/CurrentLatitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="5dip"
            android:text="@string/CurrentLatitude"
            android:textSize="20dip" >
        </TextView>

        <TextView
            android:id="@+id/LatitudeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LatitudeText"
            android:textSize="20dip" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/CurrentLongitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="5dip"
            android:text="@string/CurrentLongitude"
            android:textSize="20dip" >
        </TextView>

        <TextView
            android:id="@+id/LongitudeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LongitudeText"
            android:textSize="20dip" >
        </TextView>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/CurrentDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="5dip"
            android:text="@string/CurrentDistance"
            android:textSize="20dip" >
        </TextView>

        <TextView
            android:id="@+id/DistanceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DistanceText"
            android:textSize="20dip" >
        </TextView>
    </LinearLayout>

</LinearLayout> 